--- a/views/admin/pages/roles/create.pug
+++ b/views/admin/pages/roles/create.pug
@@ -1,33 +1,36 @@
 extends ../../layouts/default.pug
 
 block main 
-    h1(class="mb-4") Thêm mới quyền
+    if (roles.permission.includes('role_create'))
+        h1(class="mb-4") Thêm mới quyền
 
-    form(
-        action="/admin/roles/create"
-        method="POST"
-        id="form-create-permission"
-    )
+        form(
+            action="/admin/roles/create"
+            method="POST"
+            id="form-create-permission"
+        )
 
-        div(class="form-group")
-            label(for="title") Tiêu đề
-            input(
-                type="text" 
-                class="form-control"
-                id="title"
-                name="title"
-                placeholder="Tên quyền..."
-                required
-            )
+            div(class="form-group")
+                label(for="title") Tiêu đề
+                input(
+                    type="text" 
+                    class="form-control"
+                    id="title"
+                    name="title"
+                    placeholder="Tên quyền..."
+                    required
+                )
 
-        div(class="form-group")
-            label(for="description") Mô tả ngắn
-            input(
-                id="description"
-                type="text" 
-                class="form-control"
-                name="description"
-                placeholder="Mô tả..."
-            )
-        br
-        button(type="submit" class="btn btn-primary") Tạo mới
+            div(class="form-group")
+                label(for="description") Mô tả ngắn
+                input(
+                    id="description"
+                    type="text" 
+                    class="form-control"
+                    name="description"
+                    placeholder="Mô tả..."
+                )
+            br
+            button(type="submit" class="btn btn-primary") Tạo mới
+    else 
+        div Không được cấp quyền truy cập trang này, liên hệ <a href='https://www.facebook.com/khuongminhminh.hoang'>Hoàng Minh Khương</a> để được cấp quyền
