--- a/views/admin/pages/dashboard/index.pug
+++ b/views/admin/pages/dashboard/index.pug
@@ -2,3 +2,7 @@ extends ./../../layouts/default.pug
 
 block main 
     h1(class="mb-4") Trang tổng quan
+
+    div #{account}
+    div ----------------------
+    div #{roles}
