--- a/views/admin/pages/product-category/create.pug
+++ b/views/admin/pages/product-category/create.pug
@@ -3,100 +3,103 @@ include ../../mixins/notification-error.pug
 include ../../mixins/tree-level-category.pug
 
 block main 
-    +notification-error(messages.error)
+    if (roles.permission.includes('product-category_create'))
+        +notification-error(messages.error)
 
-    h1(class="mb-4") Thêm mới danh mục
-    form(
-        action="/admin/products-category/create"
-        method="POST"
-        id="form-create-product-category"
-        enctype="multipart/form-data" 
-    )
+        h1(class="mb-4") Thêm mới danh mục
+        form(
+            action="/admin/products-category/create"
+            method="POST"
+            id="form-create-product-category"
+            enctype="multipart/form-data" 
+        )
 
-        div(class="form-group")
-            label(for="title") Tiêu đề
-            input(
-                type="text" 
-                class="form-control"
-                id="title"
-                name="title"
-                placeholder="Tên danh mục..."
-                required
-            )
-
-        div(class="form-group")
-            label(for="parentId") Danh mục cha
-            select(
-                class="form-control"
-                id="parentId"
-                name="parentId"
-            )
-                option(value="") --Chọn danh mục cha --     
-                +tree-level-category(parentsCategory, 1)
-
-
-        div(class="form-group")
-            label(for="description") Mô tả
-            textarea(
-                class="form-control"
-                id="description"
-                name="description"
-                placeholder="Mô tả..."
-                rows="5"
-            )
-
-        div(class="form-group")
-            label(for="thumbnail") Ảnh
-            input(
-                type="file"
-                class="form-control-file"
-                id="thumbnail"
-                name="thumbnail"
-                placeholder="image.jpg"
-                accept="image/*"
-            )
-            div(class="preview")
-                img(
-                    id="preview-image"
-                    class="img-thumbnail"
-                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTxKjw7UKMErGf4sBC7uz44m65E6QemoO7Tbw&s"
-                    width="150px"
+            div(class="form-group")
+                label(for="title") Tiêu đề
+                input(
+                    type="text" 
+                    class="form-control"
+                    id="title"
+                    name="title"
+                    placeholder="Tên danh mục..."
+                    required
                 )
-                a(class="btn btn-danger btn-sm" deleted) x
 
-        div(class="form-group")
-            label(for="position") Vị trí
-            input(
-                type="number"
-                class="form-control"
-                id="position"
-                name="position"
-                min="0"
-                placeholder="Tự động tăng"
-            )
+            div(class="form-group")
+                label(for="parentId") Danh mục cha
+                select(
+                    class="form-control"
+                    id="parentId"
+                    name="parentId"
+                )
+                    option(value="") --Chọn danh mục cha --     
+                    +tree-level-category(parentsCategory, 1)
 
-        div(class="form-check form-check-inline")
+
+            div(class="form-group")
+                label(for="description") Mô tả
+                textarea(
+                    class="form-control"
+                    id="description"
+                    name="description"
+                    placeholder="Mô tả..."
+                    rows="5"
+                )
+
+            div(class="form-group")
+                label(for="thumbnail") Ảnh
                 input(
-                    class="form-check-input" 
-                    type="radio" 
-                    name="status" 
-                    id="active" 
-                    value="active"
-                    checked
-                ) 
-                label(for="active" 
-                class="form-check-label"
-                ) Hoạt động
-        div(class="form-check form-check-inline")
+                    type="file"
+                    class="form-control-file"
+                    id="thumbnail"
+                    name="thumbnail"
+                    placeholder="image.jpg"
+                    accept="image/*"
+                )
+                div(class="preview")
+                    img(
+                        id="preview-image"
+                        class="img-thumbnail"
+                        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTxKjw7UKMErGf4sBC7uz44m65E6QemoO7Tbw&s"
+                        width="150px"
+                    )
+                    a(class="btn btn-danger btn-sm" deleted) x
+
+            div(class="form-group")
+                label(for="position") Vị trí
                 input(
-                    class="form-check-input" 
-                    type="radio" 
-                    name="status" 
-                    id="inactive" 
-                    value="inactive"
-                ) 
-                label(for="inactive" 
-                class="form-check-label"
-                ) Dừng hoạt động
-        br
-        button(type="submit" class="btn btn-primary") Tạo mới
+                    type="number"
+                    class="form-control"
+                    id="position"
+                    name="position"
+                    min="0"
+                    placeholder="Tự động tăng"
+                )
+
+            div(class="form-check form-check-inline")
+                    input(
+                        class="form-check-input" 
+                        type="radio" 
+                        name="status" 
+                        id="active" 
+                        value="active"
+                        checked
+                    ) 
+                    label(for="active" 
+                    class="form-check-label"
+                    ) Hoạt động
+            div(class="form-check form-check-inline")
+                    input(
+                        class="form-check-input" 
+                        type="radio" 
+                        name="status" 
+                        id="inactive" 
+                        value="inactive"
+                    ) 
+                    label(for="inactive" 
+                    class="form-check-label"
+                    ) Dừng hoạt động
+            br
+            button(type="submit" class="btn btn-primary") Tạo mới
+    else 
+        div Không được cấp quyền truy cập trang này, liên hệ <a href='https://www.facebook.com/khuongminhminh.hoang'/>Hoàng Minh Khương</a> để được cấp quyền
