--- a/views/admin/pages/product-category/detail.pug
+++ b/views/admin/pages/product-category/detail.pug
@@ -3,42 +3,46 @@ include ../../mixins/notification-error.pug
 include ../../mixins/notification-success.pug
 
 block main 
-    +notification-error(messages.error)
-    +notification-success(messages.success)
+    if (roles.permission.includes('product-category_view'))
+        +notification-error(messages.error)
+        +notification-success(messages.success)
 
-    h1(class="mb-4") Chi tiết danh mục
+        h1(class="mb-4") Chi tiết danh mục
 
-    if (productCategory.title)
-        div Tên danh mục:  <b>#{productCategory.title}</b>
+        if (productCategory.title)
+            div Tên danh mục:  <b>#{productCategory.title}</b>
 
-    if (productCategory.thumbnail)
-        img(
-            id="preview-image"
-            class="img-thumbnail m-2"
-            src=productCategory.thumbnail
-            width="150px"
-        )
-    br
-    if (productCategory.status == 'active')
-        span Trạng thái: 
-        a(
-            href='javascript:;'
-            class="badge badge-success"
-        ) Hoạt động
-    else 
-        a(
-            href='javascript:;'
-            class="badge badge-danger"
-        ) Dừng hoạt động
-    
-    
-    if (productCategory.description)
-        div <i>!{productCategory.description}</i>
+        if (productCategory.thumbnail)
+            img(
+                id="preview-image"
+                class="img-thumbnail m-2"
+                src=productCategory.thumbnail
+                width="150px"
+            )
+        br
+        if (productCategory.status == 'active')
+            span Trạng thái: 
+            a(
+                href='javascript:;'
+                class="badge badge-success"
+            ) Hoạt động
+        else 
+            a(
+                href='javascript:;'
+                class="badge badge-danger"
+            ) Dừng hoạt động
         
-    br
-    a(
-        type="button" 
-        href=`${prefixAdmin}/products-category/edit/${productCategory._id}`
-        class="btn btn-warning btn-sm mr-1"
-    ) Chỉnh sửa
+        
+        if (productCategory.description)
+            div <i>!{productCategory.description}</i>
+            
+        br
+        if (roles.permission.includes('product-category_edit'))
+            a(
+                type="button" 
+                href=`${prefixAdmin}/products-category/edit/${productCategory._id}`
+                class="btn btn-warning btn-sm mr-1"
+            ) Chỉnh sửa
+    else 
+        div Không được cấp quyền truy cập trang này, liên hệ <a href='https://www.facebook.com/khuongminhminh.hoang'/>Hoàng Minh Khương</a> để được cấp quyền
     
