--- a/views/admin/pages/products/edit.pug
+++ b/views/admin/pages/products/edit.pug
@@ -4,145 +4,148 @@ include ../../mixins/notification-success.pug
 include ../../mixins/tree-level-category.pug
 
 block main 
-    +notification-error(messages.error)
-    +notification-success(messages.success)
-    
-    h1(class="mb-4") Chỉnh sửa sản phẩm
+    if (roles.permission.includes('product_edit'))
+        +notification-error(messages.error)
+        +notification-success(messages.success)
+        
+        h1(class="mb-4") Chỉnh sửa sản phẩm
 
-    form(
-        action=`${prefixAdmin}/products/edit/${product.id}?_method=PATCH`
-        method="POST"
-        id="form-edit-product"
-        enctype="multipart/form-data" 
-    )
-        //- Chú ý thuộc tính này đang sử dụng enctype="multipart/form-data" để upload file. Để xử lý loại dữ liệu này, bạn cần dùng một middleware đặc biệt như multer, nếu không, bên backend khi gửi form lên sẽ không nhận được req.body          
+        form(
+            action=`${prefixAdmin}/products/edit/${product.id}?_method=PATCH`
+            method="POST"
+            id="form-edit-product"
+            enctype="multipart/form-data" 
+        )
+            //- Chú ý thuộc tính này đang sử dụng enctype="multipart/form-data" để upload file. Để xử lý loại dữ liệu này, bạn cần dùng một middleware đặc biệt như multer, nếu không, bên backend khi gửi form lên sẽ không nhận được req.body          
 
-        div(class="form-group")
-            label(for="title") Tiêu đề
-            input(
-                type="text" 
-                class="form-control"
-                id="title"
-                name="title"
-                placeholder="Tiêu đề sản phẩm..."
-                value=product.title
-                required
-            )
-
-        div(class="form-group")
-            label(for="productCategoryId") Danh mục
-            select(
-                class="form-control"
-                id="productCategoryId"
-                name="productCategoryId"
-            )
-                option(
-                    value=""
-                ) --Chọn danh mục --
-                +tree-level-category(category, 1, product.productCategoryId)
-
-        div(class="form-group")
-            label(for="description") Mô tả
-            textarea(
-                class="form-control"
-                id="description"
-                name="description"
-                placeholder="Mô tả..."
-                rows="5"
-            ) #{product.description}
-
-        div(class="form-group")
-            label(for="price") Giá
-            input(
-                type="number" 
-                class="form-control"
-                id="price"
-                name="price"
-                placeholder="0"
-                min="0"
-                value=product.price
-            )
-
-        div(class="form-group")
-            label(for="discountPercentage") % Giảm giá
-            input(
-                type="number"
-                class="form-control"
-                id="discountPercentage"
-                name="discountPercentage"
-                placeholder="0"
-                min="0"
-                max="100"
-                step="0.01"
-                value=product.discountPercentage
-            )
-
-        div(class="form-group")
-            label(for="stock") Số lượng
-            input(
-                type="number"
-                class="form-control"
-                id="stock"
-                name="stock"
-                placeholder="0"
-                min="0"
-                value=product.stock
-            )
-
-        div(class="form-group")
-            label(for="thumbnail") Ảnh
-            input(
-                type="file"
-                class="form-control-file"
-                id="thumbnail"
-                name="thumbnail"
-                placeholder=".jpg/png"
-                accept="image/*"
-            )
-            div(class="preview")
-                img(
-                    id="preview-image"
-                    class="img-thumbnail"
-                    src=product.thumbnail
-                    width="150px"
+            div(class="form-group")
+                label(for="title") Tiêu đề
+                input(
+                    type="text" 
+                    class="form-control"
+                    id="title"
+                    name="title"
+                    placeholder="Tiêu đề sản phẩm..."
+                    value=product.title
+                    required
                 )
-                a(class="btn btn-danger btn-sm" deleted) x
 
-        div(class="form-group")
-            label(for="position") Vị trí
-            input(
-                type="number"
-                class="form-control"
-                id="position"
-                name="position"
-                min="0"
-                placeholder="Tự động tăng"
-                value=product.position
-            )
+            div(class="form-group")
+                label(for="productCategoryId") Danh mục
+                select(
+                    class="form-control"
+                    id="productCategoryId"
+                    name="productCategoryId"
+                )
+                    option(
+                        value=""
+                    ) --Chọn danh mục --
+                    +tree-level-category(category, 1, product.productCategoryId)
 
-        div(class="form-check form-check-inline")
+            div(class="form-group")
+                label(for="description") Mô tả
+                textarea(
+                    class="form-control"
+                    id="description"
+                    name="description"
+                    placeholder="Mô tả..."
+                    rows="5"
+                ) #{product.description}
+
+            div(class="form-group")
+                label(for="price") Giá
                 input(
-                    class="form-check-input" 
-                    type="radio" 
-                    name="status" 
-                    id="active" 
-                    value="active"
-                    checked=(product.status == 'active' ? true : false)
-                ) 
-                label(for="active" 
-                class="form-check-label"
-                ) Hoạt động
-        div(class="form-check form-check-inline")
+                    type="number" 
+                    class="form-control"
+                    id="price"
+                    name="price"
+                    placeholder="0"
+                    min="0"
+                    value=product.price
+                )
+
+            div(class="form-group")
+                label(for="discountPercentage") % Giảm giá
                 input(
-                    class="form-check-input" 
-                    type="radio" 
-                    name="status" 
-                    id="inactive" 
-                    value="inactive"
-                    checked=(product.status == 'inactive' ? true : false)
-                ) 
-                label(for="inactive" 
-                class="form-check-label"
-                ) Dừng hoạt động
-        br
-        button(type="submit" class="btn btn-primary") Cập nhật
+                    type="number"
+                    class="form-control"
+                    id="discountPercentage"
+                    name="discountPercentage"
+                    placeholder="0"
+                    min="0"
+                    max="100"
+                    step="0.01"
+                    value=product.discountPercentage
+                )
+
+            div(class="form-group")
+                label(for="stock") Số lượng
+                input(
+                    type="number"
+                    class="form-control"
+                    id="stock"
+                    name="stock"
+                    placeholder="0"
+                    min="0"
+                    value=product.stock
+                )
+
+            div(class="form-group")
+                label(for="thumbnail") Ảnh
+                input(
+                    type="file"
+                    class="form-control-file"
+                    id="thumbnail"
+                    name="thumbnail"
+                    placeholder=".jpg/png"
+                    accept="image/*"
+                )
+                div(class="preview")
+                    img(
+                        id="preview-image"
+                        class="img-thumbnail"
+                        src=product.thumbnail
+                        width="150px"
+                    )
+                    a(class="btn btn-danger btn-sm" deleted) x
+
+            div(class="form-group")
+                label(for="position") Vị trí
+                input(
+                    type="number"
+                    class="form-control"
+                    id="position"
+                    name="position"
+                    min="0"
+                    placeholder="Tự động tăng"
+                    value=product.position
+                )
+
+            div(class="form-check form-check-inline")
+                    input(
+                        class="form-check-input" 
+                        type="radio" 
+                        name="status" 
+                        id="active" 
+                        value="active"
+                        checked=(product.status == 'active' ? true : false)
+                    ) 
+                    label(for="active" 
+                    class="form-check-label"
+                    ) Hoạt động
+            div(class="form-check form-check-inline")
+                    input(
+                        class="form-check-input" 
+                        type="radio" 
+                        name="status" 
+                        id="inactive" 
+                        value="inactive"
+                        checked=(product.status == 'inactive' ? true : false)
+                    ) 
+                    label(for="inactive" 
+                    class="form-check-label"
+                    ) Dừng hoạt động
+            br
+            button(type="submit" class="btn btn-primary") Cập nhật
+    else 
+        div Không được cấp quyền truy cập trang này, liên hệ <a href='https://www.facebook.com/khuongminhminh.hoang'>Hoàng Minh Khương</a> để được cấp quyền
