--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -7,160 +7,181 @@ include ./../../mixins/notification-success.pug
 include ./../../mixins/notification-error.pug
 
 block main 
-    h1(class="mb-4") Danh sách sản phẩm 
+    if (roles.permission.includes('product_view'))
+        h1(class="mb-4") Danh sách sản phẩm 
 
-    //- notification
-    +notification-success(messages.success)
-    +notification-error(messages.error)
+        //- notification
+        +notification-success(messages.success)
+        +notification-error(messages.error)
 
-    //- Filter
-    .card.bg-light.mb-3
-        .card-header Bộ lọc và tìm kiếm
-        .card-body
-            .row 
-                //- các button để lọc sản phẩm
-                .col-6
-                    +filter-button(filterStatus)
+        //- Filter
+        .card.bg-light.mb-3
+            .card-header Bộ lọc và tìm kiếm
+            .card-body
+                .row 
+                    //- các button để lọc sản phẩm
+                    .col-6
+                        +filter-button(filterStatus)
 
-                //- form tìm kiếm
-                .col-6
-                    +form-search(productName)
+                    //- form tìm kiếm
+                    .col-6
+                        +form-search(productName)
 
-    //- List products
-    .card.bg-light.mb-3
-        .card-header Danh sách
-            .row 
-                .col-7
-                    +form-change-multi('products')
-                
-                .col-2
-                    select(class="form-control dropdown-toggle" name="type" sort)
-                        option(disabled selected ) ---Chọn tiêu chí sắp xếp---
-                        option(value="price-asc") Giá: Thấp đến cao                            
-                        option(value="price-desc") Giá: Cao đến thấp                           
-                        option(value="position-asc") Vị trí tăng dần                           
-                        option(value="position-desc") Vị trí giảm dần  
-                        option(value="title-asc")  Tên: A - Z
-                        option(value="title-desc") Tên: Z - A  
+        //- List products
+        .card.bg-light.mb-3
+            .card-header Danh sách
+                .row 
+                    .col-7
+                        +form-change-multi('products')
                     
-                .col-3
-                    a(
-                        type="button" 
-                        class=`btn btn-outline-success mr-1 alert-success`
-                        href=`${prefixAdmin}/products/create`
-                        button-add
-                    )  + Thêm mới
+                    .col-2
+                        select(class="form-control dropdown-toggle" name="type" sort)
+                            option(disabled selected ) ---Chọn tiêu chí sắp xếp---
+                            option(value="price-asc") Giá: Thấp đến cao                            
+                            option(value="price-desc") Giá: Cao đến thấp                           
+                            option(value="position-asc") Vị trí tăng dần                           
+                            option(value="position-desc") Vị trí giảm dần  
+                            option(value="title-asc")  Tên: A - Z
+                            option(value="title-desc") Tên: Z - A  
+                        
+                    .col-3
+                        if (roles.permission.includes('product_create'))
+                            a(
+                                type="button" 
+                                class=`btn btn-outline-success mr-1 alert-success`
+                                href=`${prefixAdmin}/products/create`
+                                button-add
+                            )  + Thêm mới
+                        
+                        if (roles.permission.includes('product_restore'))
+                            a(
+                                type="button" 
+                                class=`btn btn-outline-danger mr-1 alert-danger`
+                                href=`${prefixAdmin}/trash/products`
+                                button-deleted
+                            )  
+                                span
+                                    svg(xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-trash" viewBox="0 0 20 20") 
+                                        path(d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z")
+                                        path(d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z")
+                                span(class="mr-auto")  Đã xóa
                     
-
-                    a(
-                        type="button" 
-                        class=`btn btn-outline-danger mr-1 alert-danger`
-                        href=`${prefixAdmin}/trash/products`
-                        button-deleted
-                    )  
-                        span
-                            svg(xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-trash" viewBox="0 0 20 20") 
-                                path(d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z")
-                                path(d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z")
-                        span(class="mr-auto")  Đã xóa
-                
-                
-        .card-body
-            table(class="table table-hover table-sm" checbox-multi)
-                thead
-                    tr
-                        th(class="form-check text-center") 
-                            input(
-                                type="checkbox" 
-                                name="checkall"   
-                            )
-
-                        th(class='text-center') STT
-                        th(class='text-center') Hình ảnh 
-                        th(class='text-left') Tiêu đề
-                        th(class='text-center') Giá
-                        th(class='text-center') Vị trí
-                        th(class='text-center') Trạng thái
-                        th(class='text-center') Hành Động
-                tbody
-                    //- for như js
-                    -for(let i = 0; i < products.length; ++i)
+                    
+            .card-body
+                table(class="table table-hover table-sm" checbox-multi)
+                    thead
                         tr
-                            td(class="form-check")
+                            th(class="form-check text-center") 
                                 input(
                                     type="checkbox" 
-                                    name="id"
-                                    value=products[i]._id
-                                )
-                                
-                            td(class='text-center') #{pagination.limitItems * (pagination.currentPage - 1) + i + 1}
-                            td(class='text-center') 
-                                img(src=products[i].thumbnail
-                                    alt="Ảnh sản phẩm"
-                                    width="100px"
-                                    style="aspect-ratio: 4/3"
-                                )
-                            td #{products[i].title}
-                            td(class='text-center') #{products[i].price}$
-
-                            td(class='text-center')
-                                input(
-                                    type="number"
-                                    class="form-control"
-                                    name="position"
-                                    value=products[i].position    
+                                    name="checkall"   
                                 )
 
-                            //- if else như js
-                            td(class='text-center') 
-                                if(products[i].status == 'active')
-                                    a( 
-                                        href='javascript:;'
-                                        class="badge badge-success"
-                                        id = products[i]._id
-                                        status= products[i].status
-                                    ) Hoạt động
-                                else
-                                    a(
-                                        href='javascript:;'
-                                        class="badge badge-danger"
-                                        id = products[i]._id
-                                        status= products[i].status
-                                    ) Dừng hoạt động
+                            th(class='text-center') STT
+                            th(class='text-center') Hình ảnh 
+                            th(class='text-left') Tiêu đề
+                            th(class='text-center') Giá
+                            th(class='text-center') Vị trí
+                            th(class='text-center') Trạng thái
+                            th(class='text-center') Hành Động
+                    tbody
+                        //- for như js
+                        -for(let i = 0; i < products.length; ++i)
+                            tr
+                                td(class="form-check")
+                                    input(
+                                        type="checkbox" 
+                                        name="id"
+                                        value=products[i]._id
+                                    )
+                                    
+                                td(class='text-center') #{pagination.limitItems * (pagination.currentPage - 1) + i + 1}
+                                td(class='text-center') 
+                                    img(src=products[i].thumbnail
+                                        alt="Ảnh sản phẩm"
+                                        width="100px"
+                                        style="aspect-ratio: 4/3"
+                                    )
+                                td #{products[i].title}
+                                td(class='text-center') #{products[i].price}$
 
-                            td(class='text-center') 
-                                a(
-                                    type="button" 
-                                    href=`${prefixAdmin}/products/detail/${products[i]._id}`
-                                    class="btn btn-info btn-sm mr-1"
-                                ) Chi tiết
-                                a(
-                                    type="button" 
-                                    href=`${prefixAdmin}/products/edit/${products[i]._id}`
-                                    class="btn btn-warning btn-sm mr-1"
-                                ) Sửa
-                                a(
-                                    type="button" 
-                                    class="btn btn-danger btn-sm"
-                                    data-id=products[i]._id 
-                                    button-delete-product
-                                ) Xóa
+                                td(class='text-center')
+                                    input(
+                                        type="number"
+                                        class="form-control"
+                                        name="position"
+                                        value=products[i].position    
+                                    )
 
-    //- Pagination
-    +pagination(pagination)
+                                //- if else như js
+                                if (roles.permission.includes('product_edit'))
+                                    td(class='text-center') 
+                                        if(products[i].status == 'active')
+                                            a( 
+                                                href='javascript:;'
+                                                class="badge badge-success"
+                                                id = products[i]._id
+                                                status= products[i].status
+                                            ) Hoạt động
+                                        else
+                                            a(
+                                                href='javascript:;'
+                                                class="badge badge-danger"
+                                                id = products[i]._id
+                                                status= products[i].status
+                                            ) Dừng hoạt động
+                                else 
+                                    td(class='text-center') 
+                                        if(products[i].status == 'active')
+                                            a( 
+                                                href='javascript:;'
+                                                class="badge badge-success"
+                                            ) Hoạt động
+                                        else
+                                            a(
+                                                href='javascript:;'
+                                                class="badge badge-danger"
+                                            ) Dừng hoạt động
 
-    form(
-        id='form-change-status-product'
-        method='POST'
-        action=""
-        path=`${prefixAdmin}/products/change-status`
-    )
 
-    form(
-        id='form-delete-product'
-        method='POST'
-        action=""
-        path=`${prefixAdmin}/products/delete`
-    )
+                                td(class='text-center') 
+                                    if (roles.permission.includes('product_view'))
+                                        a(
+                                            type="button" 
+                                            href=`${prefixAdmin}/products/detail/${products[i]._id}`
+                                            class="btn btn-info btn-sm mr-1"
+                                        ) Chi tiết
+                                    if (roles.permission.includes('product_edit'))
+                                        a(
+                                            type="button" 
+                                            href=`${prefixAdmin}/products/edit/${products[i]._id}`
+                                            class="btn btn-warning btn-sm mr-1"
+                                        ) Sửa
+                                    if (roles.permission.includes('product_delete'))
+                                        a(
+                                            type="button" 
+                                            class="btn btn-danger btn-sm"
+                                            data-id=products[i]._id 
+                                            button-delete-product
+                                        ) Xóa
 
-    script(type='text/javascript' src="/admin/js/product.js")
+        //- Pagination
+        +pagination(pagination)
+
+        form(
+            id='form-change-status-product'
+            method='POST'
+            action=""
+            path=`${prefixAdmin}/products/change-status`
+        )
+
+        form(
+            id='form-delete-product'
+            method='POST'
+            action=""
+            path=`${prefixAdmin}/products/delete`
+        )
+
+        script(type='text/javascript' src="/admin/js/product.js")
+    else 
+        div Không được cấp quyền truy cập trang này, liên hệ <a href='https://www.facebook.com/khuongminhminh.hoang'>Hoàng Minh Khương</a> để được cấp quyền
